--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,30 @@
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
 body {
-    /* background: url('img/auto_familia_vacaciones.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover; */
     font-family: 'Roboto', sans-serif;
+    color: #fff;
   }
+
+.page-content{
+
+  position: absolute;
+  background-image: url("../img/family_cars_header.jpg");
+  width: 100%;
+  height: 100%; 
+  margin: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .container {
     margin-top: 10%;
     /* margin: 10%; */
-    /* background-color: rgba(0,0,0,0.5); */
+    background-color: rgba(0,0,0,0.7);
+    border-radius: 5px;
 }
 
 h1 {
@@ -21,4 +35,19 @@ h1 {
 
 .card-container {
   height: 100%;
+  /* text-align: left; */
+  /* text-align: center; */
+}
+
+.card-container h1{
+  text-align: left;
+}
+
+.card-body{
+  padding: 0px;
+  margin-top: 20px;
+}
+
+.card-body h3{
+  margin-bottom: 20px;
 }
